[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ingredients/Ingredient.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/dpcomic-crowned.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="Ingredient" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 100.0
margin_right = 294.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ingredient"
[connection signal="input_event" from="." to="." method="_on_Ingredient_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Ingredient_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Ingredient_mouse_exited"]
